# MultiprocessingAccrosDevices

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
Docker/: Dockerfile_flask  docker_compose.yaml.j2  docker_env.sh  generate_conf_files.py  nginx.conf.j2  servers.yaml
app/: CMakeLists.txt  main.cc
client/: CMakeLists.txt  client.cpp
client/client_utils/: CMakeLists.txt  utils.cpp  utils.h
docs/: info.txt
gtests/: CMakeLists.txt  gtest_mean_stdv.cpp  gtest_timing.cpp
python/: server.py
python/client/: selenium_client.py
python/proxy/: flask_proxy.py  proxy.py  ref.py  server_pool.py
python/tests/: test_server_pool.py
python/utils/: common_cmds.py  get_container_ip.py
tests/: CMakeLists.txt
